# slur-meter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
.superpowers/sdd/: heartbeat-followup-report.md  progress.md  task-11-report.md  task-5-report.md  task-6-report.md
api/: artifacts.py  auth.py  database.py  dispatcher.py  domain.py  errors.py  main.py  migrations.py  pipeline.py  publishing.py  pyproject.toml  requirements.txt  retry.py  schemas.py  settings.py  subtitles.py
docs/: codebase-review.md  operations-control-panel.md
fixtures/pulp_fiction/: analysis.json
scripts/: dev_frames.py  get_youtube_token.py
src/analysis/: engine.py
src/audio/: __init__.py  layers.py  mixer.py  pipeline.py  providers.py
src/data/: movie_metadata.py  opensubtitles.py  subtitle_quality.py
src/publishing/: errors.py  instagram.py  metadata.py  tiktok.py  youtube.py
src/video/: compositor.py  encoder.py  plotter.py  tts.py
tests/: conftest.py
tests/integration/: test_api.py  test_api_actions.py  test_api_security.py  test_cli.py  test_generation_scenarios.py  test_job_submission.py  test_operational_scenarios.py  test_pipeline.py  test_pipeline_runner.py
tests/unit/: test_analysis.py  test_artifacts.py  test_compositor.py  test_database_migrations.py  test_dispatcher.py  test_domain.py  test_encoder.py  test_errors.py  test_metadata.py  (+9 more)
webui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+60 files in other folders)
